<resources>
    <string name="app_name">Posmate Firmware Updater</string>
    <string name="main_btn_connect">Connect</string>
    <string name="main_btn_aprom">APROM</string>
    <string name="main_btn_start">Start</string>
    <string name="main_tv_burning">Burning</string>
    <string name="main_tv_connecttypeusb">Connection type：USB</string>
    <string name="main_tv_disconnected">Disconnected</string>
    <string name="main_tv_partno">Part No.</string>
    <string name="main_tv_arm">RAM：</string>
    <string name="main_tv_na">N/A</string>
    <string name="main_tv_aprom">APROM：</string>
    <string name="main_tv_dataflash">DataFlash：</string>
    <string name="main_tv_ver">F/W Ver：</string>
    <string name="main_tv_loadfile">Load file</string>
    <string name="main_tv_filename">File path：</string>
    <string name="main_tv_filesize">File size：</string>
    <string name="main_tv_checksum">Checksum：</string>
    <string name="main_tv_baseaddress">BaseAddress 0x：</string>
    <string name="main_tv_filedataaprom">File data：APROM</string>
    <string name="main_tv_status">Status</string>
    <string name="main_java_connectsuccessful">Connect successful</string>
    <string name="main_java_disconnect">DisConnect</string>
</resources>
